objects/ssot__LoyaltyJournalSubtype__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Journal Subtype Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyJournalTypeId__c</fullName>
        <label>Loyalty Journal Type Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761179737_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyJournalSubtype_LoyaltyJournal_rel</label>
        <referenceTo>ssot__LoyaltyJournalType__dlm</referenceTo>
        <relationshipLabel>LoyaltyJournalSubtype_LoyaltyJournal_rel</relationshipLabel>
        <relationshipName>rel_1697761179737_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761179838_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyJournalType_Id_map_LoyaltyJou_rel</label>
        <referenceTo>ssot__LoyaltyJournalType__dlm</referenceTo>
        <relationshipLabel>LoyaltyJournalType_Id_map_LoyaltyJou_rel</relationshipLabel>
        <relationshipName>rel_1697761179838_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>